fixed horizontal scroll

--- a/four-card-feature-section/style.css
+++ b/four-card-feature-section/style.css
@@ -48,6 +48,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  overflow-x: none;
 }
 
 #overlay {
@@ -66,7 +67,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 40px 20px;
 }
 
 main {
@@ -74,7 +74,6 @@ main {
   flex-direction: column;
   align-items: center;
   padding: 60px 40px;
-  margin: 0 20px;
 }
 
 img {
